policies/tests/values.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaces:
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: prod
      labels:
        supply-chain.sufyan.dev/enforce: "true"
